# kitefs

./: README.md  justfile  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: cli.instructions.md  config.instructions.md  definitions.instructions.md  exceptions.instructions.md  join.instructions.md  providers.instructions.md  registry.instructions.md  sdk.instructions.md  testing.instructions.md  validation.instructions.md
.github/prompts/: expert-mentor.prompt.md  expert-planning.prompt.md  expert-reviewer.prompt.md  expert-tdd-implement.prompt.md  expert-tdd-planning.prompt.md  expert-tdd.prompt.md
docs/: docs-00-01-reference-use-case.md  docs-00-02-flow-charts.md  docs-01-project-charter.md  docs-02-project-requirements.md  docs-03-01-architecture-overview.md  docs-03-02-internals-and-data.md  docs-03-03-api-contracts.md  docs-04-implementation-guide.md
src/kitefs/: __init__.py  __main__.py  cli.py  config.py  definitions.py  exceptions.py  feature_store.py  registry.py
src/kitefs/providers/: __init__.py  base.py  factory.py  local.py
src/kitefs/registry/: __init__.py  _discovery.py  _manager.py  _serialization.py  _validation.py
tests/: conftest.py  helpers.py  test_cli.py  test_config.py  test_definitions.py  test_e2e.py  test_exceptions.py  test_feature_store.py  test_kitefs.py  test_providers.py  test_registry.py  test_registry_discovery.py  test_registry_manager.py  test_registry_validation.py
tests/cli/: test_apply.py  test_describe.py  test_help.py  test_init.py  test_list.py  test_placeholders.py
tests/config/: test_load_errors.py  test_load_success.py
tests/definitions/: test_enums.py  test_reference.py  test_types.py
tests/e2e/: test_cli_workflows.py  test_error_workflows.py  test_reapply.py  test_reference.py  test_sdk_workflows.py
tests/exceptions/: test_hierarchy.py
tests/feature_store/: test_apply.py  test_constructor.py  test_describe.py  test_list.py
tests/providers/: test_abc.py  test_factory.py  test_local.py
tests/registry/: test_discovery.py  test_manager.py  test_validation.py
