[project]
name = "kitefs"
version = "0.2.0a1"
description = "A Python feature store library for offline/online feature storage, registry, validation, and serving"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Fedai Paca", email = "fedaipaca@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.3.2",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
aws = ["boto3"]

[project.urls]
Homepage = "https://github.com/fedaipaca/kitefs"
Repository = "https://github.com/fedaipaca/kitefs"
Issues = "https://github.com/fedaipaca/kitefs/issues"

[project.scripts]
kitefs = "kitefs.cli:cli"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "-v --tb=short"

[tool.pyright]
include = ["src", "tests"]
exclude = ["build", "dist", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
extraPaths = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
